@startuml

package storage {
    hide circle
    skinparam classAttributeIconSize 0

    class GradModuleList {
        +YEAR1SEM1MODULES: List<Mod>
        +YEAR1SEM2MODULES: List<Mod>
        +YEAR2SEM1MODULES: List<Mod>
        +YEAR2SEM2MODULES: List<Mod>
        +YEAR3SEM1MODULES: List<Mod>
        +YEAR3SEM2MODULES: List<Mod>
        +YEAR4SEM1MODULES: List<Mod>
        +YEAR4SEM2MODULES: List<Mod>
        -generateUE(): Mod
    }

    class ModStorage {
        -modules: List<Mod>
        +findModuleByCode(code: String): Mod
        +moduleExists(code: String): boolean
        +getModules(): List<Mod>
        -loadModulesFromFile(): void
        -parsePrereqTree(json: String): Prereq
    }

    class UserStorage {
        -file: File
        +saveUserData(user: User): void
        +loadUserData(): User
    }

    ModStorage  -->  Mod
    GradModuleList  -->  Mod
    ModStorage  -->  Prereq
    UserStorage  -->  User
    User  -->  UserMod
    UserMod -->  Grade
    User  -->  EducationLevel
}
@enduml